[tool.poetry]
name = "tiddlywiki-duplicator"
version = "0.1.0"
description = ""
authors = ["EXEvie <11958133+EXEvie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
